@@ -1,3 +1,10 @@
+2009-08-29  Rodrigo Kumpera  <rkumpera@novell.com>
+
+	* cli-global-props-tests.md: New tests for global
+	properties to check tables for.
+
+	* Makefile: Add new test source.
+
 2009-08-26  Rodrigo Kumpera  <rkumpera@novell.com>
 
 	* cli-tables-tests.md: Regression test for #534189
